--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -3,7 +3,7 @@ title: Toggletip
 description:
   Toggletips use the disclosure pattern to toggle the visibility of a popover.
   They display additional, hidden information upon the click of a UI trigger
-  element.
+  element and can contain interactive elements.
 tabs: ['Usage', 'Style']
 ---
 
@@ -11,7 +11,7 @@ tabs: ['Usage', 'Style']
 
 Toggletips use the disclosure pattern to toggle the visibility of a popover.
 They display additional, hidden information upon the click of a UI trigger
-element.
+element and can contain interactive elements.
 
 </PageDescription>
 
@@ -21,9 +21,7 @@ element.
 <AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
-<AnchorLink>Universal behaviors</AnchorLink>
-<AnchorLink>Definition toggletip</AnchorLink>
-<AnchorLink>Interactive toggletip</AnchorLink>
+<AnchorLink>Behaviors</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>References</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
@@ -70,7 +68,7 @@ information that is not interactive. A toggletip is used on `Click` and `Enter`
 when you need to expose interactive elements, such as button, that a user needs
 to interact with.
 
-The exception here is that Definition tooltip can be invoked on either hover or
+The exception here is that definition tooltip can be invoked on either hover or
 click depending on use case.
 
 ### When to use
@@ -185,7 +183,7 @@ scroll horizontally or let content bleed off the page.
 For further content guidance, see Carbon's
 [content guidelines](<[https://www.carbondesignsystem.com/guidelines/content/general](https://www.carbondesignsystem.com/guidelines/content/general)>).
 
-## Universal behaviors
+## Behaviors
 
 ### States
 
@@ -197,8 +195,8 @@ toggletip is hidden and inactive. Toggletips are displayed on `Click` and
 
 #### Mouse
 
-Toggletips are triggered when a user clicks the interactive trigger and is
-dismissed by clicking anywhere outside the toggletip's active popover.
+Toggletips are triggered on `Click` and is dismissed by clicking anywhere
+outside the toggletip's active popover or UI trigger.
 
 #### Keyboard
 
