--- a/src/pages/components/toggletip/style.mdx
+++ b/src/pages/components/toggletip/style.mdx
@@ -11,7 +11,7 @@ tabs: ['Usage', 'Style']
 
 ### Toggletip
 
-| element        | property         | color token           |
+| Element        | Property         | Color token           |
 | -------------- | ---------------- | --------------------- |
 | Label          | text color       | `$text-secondary`     |
 | Trigger button | svg              | `$icon-secondary`     |
@@ -36,10 +36,9 @@ tabs: ['Usage', 'Style']
 
 ## Typography
 
-| Element                      | font-size (px-rem) | font-weight   | type token       |
-| ---------------------------- | ------------------ | ------------- | ---------------- |
-| Label (definition toggletip) | 14px / 0.875rem    | Regular / 400 | `$body-short-01` |
-| Body text                    | 14px / 0.875rem    | Regular / 400 | `$body-long-01`  |
+| Element   | font-size (px-rem) | font-weight   | type token      |
+| --------- | ------------------ | ------------- | --------------- |
+| Body text | 14px / 0.875rem    | Regular / 400 | `$body-long-01` |
 
 ## Structure
 
@@ -62,17 +61,17 @@ contain.
 
 </div>
 
-<Caption>Structure and spacing measurements toggletip. | px / rem</Caption>
+<Caption>Structure and spacing measurements for toggletip. | px / rem</Caption>
 
 ### Placement
 
 Toggletip directions by default are set to auto. Upon opening, toggletips can
 detect the edges of the browser to properly be placed in view so the container
 does not get cutoff. Toggletips can instead use specific directions and may be
-positioned top, right, bottom, or left to the trigger item. Toggletips should be
-placed at least 16px / 1rem off of the bottom of the page and not bleed off page
-or behind other content. On mobile, toggletips can only appear below the
-toggletip UI trigger.
+positioned **top**, **right**, **bottom**, or **left** to the trigger item.
+Toggletips should be placed at least 16px / 1rem off of the bottom of the page
+and not bleed off page or behind other content. On mobile, toggletips can only
+appear below the toggletip UI trigger.
 
 <div className="image--fixed">
 
