--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -68,8 +68,8 @@ information that is not interactive. A toggletip is used on `Click` and `Enter`
 when you need to expose interactive elements, such as button, that a user needs
 to interact with.
 
-The exception here is that definition tooltip can be invoked on either hover or
-click depending on use case.
+The exception here is that definition tooltip can be invoked on either `Hover`
+or `Click` depending on use case.
 
 ### When to use
 
