--- a/src/pages/components/toggletip/style.mdx
+++ b/src/pages/components/toggletip/style.mdx
@@ -18,7 +18,8 @@ tabs: ['Usage', 'Style']
 | Container      | background-color | `$background-inverse` |
 | Text           | color            | `$text-inverse`       |
 
-**Interactive states**
+ <br />
+#### Interactive states
 
 | State  | Element        | Property | Color token     |
 | ------ | -------------- | -------- | --------------- |
