--- a/src/pages/components/toggletip/style.mdx
+++ b/src/pages/components/toggletip/style.mdx
@@ -39,7 +39,7 @@ tabs: ['Usage', 'Style']
 
 | Element   | font-size (px-rem) | font-weight   | type token      |
 | --------- | ------------------ | ------------- | --------------- |
-| Body text | 14px / 0.875rem    | Regular / 400 | `$body-long-01` |
+| Body text | 14px / 0.875rem    | Regular / 400 | `$body-01` |
 
 ## Structure
 
