--- a/src/pages/components/toggletip/style.mdx
+++ b/src/pages/components/toggletip/style.mdx
@@ -37,7 +37,7 @@ tabs: ['Usage', 'Style']
 
 ## Typography
 
-| Element   | font-size (px-rem) | font-weight   | type token      |
+| Element   | Font-size (px-rem) | Font-weight   | Type token      |
 | --------- | ------------------ | ------------- | --------------- |
 | Body text | 14px / 0.875rem    | Regular / 400 | `$body-01` |
 
