--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -106,7 +106,7 @@ instead.
 </Column>
 </Row>
 
-1. **UI trigger button:** Usually a button but as long as trigger is
+1. **UI trigger button:** Usually a button but as long as the trigger is
    interactive, it can visually change its shape and size depending on the use
    case.
 2. **Tip:** An indicator that is added to a popover container to help show the
