--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -110,7 +110,7 @@ instead.
    interactive, it can visually change its shape and size depending on the use
    case.
 2. **Tip:** An indicator that is added to a popover container to help show the
-   relationship between the popover and where it was triggered from. Can utilize
+   relationship between the popover and where it was triggered from. Toggletips can utilize
    no tip, caret tip, or tab tip types.
 3. **Content area:** Varies based on use case and follows disclosure guidelines.
 4. **Popover container:** Area that contains text and interactive elements.
