--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -31,7 +31,7 @@ element and can contain interactive elements.
 ## Overview
 
 Toggletips reveal supplemental content when a user clicks a button or another UI
-element and remains actively open until a user dismiss it. A toggletip is
+element and remains actively open until a user dismisses it. A toggletip is
 comprised of a UI trigger and the
 [popover component](http://carbondesignsystem.com/components/popover/usage/).
 Use the disclosure pattern to design supplemental content within the component.
