--- a/src/pages/components/toggletip/usage.mdx
+++ b/src/pages/components/toggletip/usage.mdx
@@ -38,7 +38,7 @@ Use the disclosure pattern to design supplemental content within the component.
 Toggletips can include a wide variety of information and interactive elements as
 long
 as[accessibility requirements](https://www.ibm.com/able/requirements/requirements/)
-are maintained including focus order and ensure all functionality is operable
+are maintained including focus order and ensuring all functionality is operable
 through a keyboard interface.
 
 <Row>
