update charts to 0.54.0, add heatmap demo

--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -74,17 +74,11 @@ or all negative. Sequential heat maps can leverage the full range of the palette
 (from 10–100) to maximize contrast. Please note that the 3:1 minimum contrast
 requirement does not apply to heat maps.
 
-<Row>
-<Column  colLg={12} colMd={8} colSm={4} >
-
-![Sequential heat map](images/04_adv_heatmap_928.png)
+<ChartDemoGroup demoGroup={getDemoGroupByTitle('heatmap')} light={true} />
 
 <Caption>
   When cells get extremely small, a white border can hinder the intended effect.
 </Caption>
-
-</Column>
-</Row>
 
 #### Heat map behaviors
 
