--- a/src/pages/all-about-carbon/partners.mdx
+++ b/src/pages/all-about-carbon/partners.mdx
@@ -117,7 +117,7 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="Dawn Ahukanna" title="Design Principal and Front-end Architect, Watson IoT">
+<Profile name="Dawn Ahukanna" title="Design Principal, Technology Support Services (GTS/TSS)">
 
 ![Dawn Ahukanna headshot](/images/team/ahukanna_dawn.png)
 
@@ -142,6 +142,16 @@ increases the internal and external eminence of Carbon Design System and IBM.
 ![Jeff Chew headshot](/images/team/chew_jeff.png)
 
 </Profile>
+<Profile name="Patrick Clough" title="Design System Enablement Lead, CIO Design, Finance and Operations">
+
+![Patrick Clough headshot](/images/team/clough_patrick.png)
+
+</Profile>
+<Profile name="Shawn Hoglund" title="Experience Lead, CHQ Digital Marketing">
+
+![Shawn Hoglund headshot](/images/team/hoglund_shawn.png)
+
+</Profile>
 <Profile name="David Levinson" title="IBM Design Principal, IBM Cloud and Cognitive Software">
 
 ![David Levinson headshot](/images/team/levinson_david.png)
@@ -150,6 +160,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Alison Joseph" title="Development Manager, Carbon">
 
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
+
+</Profile>
+<Profile name="Justin Pomeroy" title="IBM Cloud Kubernetes Service UI">
+
+![Justin Pomeroy headshot](/images/team/pomeroy_justin.png)
 
 </Profile>
 <Profile name="Tessa Rodes" title="Senior Design Manager, IBM Cloud">
@@ -165,11 +180,6 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Jeannie Servaas" title="IBM Design Principal, Carbon">
 
 ![Jeannie Servaas headshot](/images/team/servaas_jean.png)
-
-</Profile>
-<Profile name="Jeff Sloyer" title="Senior Technical Staff Member, IBM Cloud">
-
-![Jeff Sloyer headshot](/images/team/sloyer_jeff.png)
 
 </Profile>
 <Profile name="JD Speer" title="Design Lead, IBM Storage">
@@ -190,6 +200,11 @@ increases the internal and external eminence of Carbon Design System and IBM.
 <Profile name="Garrett Vorbeck" title="Front-end Developer, IBM Systems">
 
 ![Garrett Vorbeck headshot](/images/team/vorbeck_garrett.png)
+
+</Profile>
+<Profile name="Cathy Zee-Poor" title="Creative Director for IBM Z Systems">
+
+![Cathy Zee-Poor headshot](/images/team/zee-poor_cathy.png)
 
 </Profile>
 </Row>
