--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -19,7 +19,7 @@ about design systems.
 
 ## Latest news
 
-<MediumPosts postLimit={9} />
+<MediumPosts postLimit={9} cardProps={{ color: 'light' }} />
 
 ## Books and articles
 
