docs(dataviz): update charts to 0.54.2, update heatmap specs & demo (#2678)
* docs(dataviz): add histogram

* update charts to 0.54.0, add heatmap demo

* remove heatmap design only tag

* update charts to 0.54.0 & update complex charts page

--- a/src/pages/data-visualization/complex-charts/index.mdx
+++ b/src/pages/data-visualization/complex-charts/index.mdx
@@ -74,17 +74,11 @@ or all negative. Sequential heat maps can leverage the full range of the palette
 (from 10–100) to maximize contrast. Please note that the 3:1 minimum contrast
 requirement does not apply to heat maps.
 
-<Row>
-<Column  colLg={12} colMd={8} colSm={4} >
-
-![Sequential heat map](images/04_adv_heatmap_928.png)
+<ChartDemoGroup demoGroup={getDemoGroupByTitle('heatmap')} light={true} />
 
 <Caption>
   When cells get extremely small, a white border can hinder the intended effect.
 </Caption>
-
-</Column>
-</Row>
 
 #### Heat map behaviors
 
@@ -97,14 +91,6 @@ users additional information and dedicated kinds of interaction.
 ![Heat map hover detail](images/04a_adv_heatmap_detail_288.png)
 
 <Caption>Exploration of a domain axis hover behavior</Caption>
-
-</Column>
-
-<Column  colLg={4} colMd={4} colSm={4} >
-
-![Heat map interactive legend detail](images/04b_adv_heatmap_detail_288.png)
-
-<Caption>Exploration of an interactive legend</Caption>
 
 </Column>
 </Row>
@@ -132,18 +118,6 @@ most common cases and include a feature flag within the code to specify
 exceptions. The data for a divergent heat map does not need to be symmetrical on
 either side of the inflection point. For example, the data set could have a zero
 value between -20 and +100 as well.
-
-<Row>
-<Column  colLg={12} colMd={8} colSm={4} >
-
-![Divergent heat map](images/05_adv_heatmap_928.png)
-
-<Caption>
-  Example of a symmetrical divergent heat map with optional cell borders
-</Caption>
-
-</Column>
-</Row>
 
 ## Network diagrams
 
