new update for progress bar

--- a/src/pages/components/progress-bar/style.mdx
+++ b/src/pages/components/progress-bar/style.mdx
@@ -1,8 +1,9 @@
-## Style (Progress bar)
-
-title: Progress bar description: A progress bar provides feedback about the
-duration and progression of a process. tabs: ['Usage', 'Style']
-
+---
+title: Progress bar
+description:
+  A progress bar provides feedback about the duration and progression of a
+  process.
+tabs: ['Usage', 'Style']
 ---
 
 ## Color
