--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -34,7 +34,7 @@ process.
 A progress bar indicates that the user's request has been received and the
 application is making progress toward completing the requested action. Progress
 bars inform users about the status of ongoing processes, the estimated time of
-how long a process will take, or a request is being excuted.
+how long a process will take, or if a request is being executed.
 
 <Row>
 <Column colLg={12}>
