--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -66,7 +66,7 @@ how long a process will take, or if a request is being executed.
 
 #### Loading, inline loading, or progress bar?
 
-- If an activity displays a loading spinners on one screen, it should not show
+- If an activity displays a loading spinner on one screen, it should not show
   the progress bar elsewhere in the design.
 - Both progress bars and circles can show either determinate or indeterminate
   progress. The given area should help determine if a progress bar or circle is
