--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -197,7 +197,7 @@ information about the progression in the optional helper text.
 </Row>
 
 1. **Label:** The text describes the process that the progress bar refers to.
-   Label can be visually hidden, but requires to be defined to be accessible.
+   The label can be visually hidden, but must be defined in order to be accessible.
 2. **Track:** The static area that the bar indicator moves on top of and acts as
    a fixed visual reference of what the total length and duration of the process
    could be.
