--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -47,7 +47,7 @@ how long a process will take, or if a request is being executed.
 #### When to use
 
 - If a process can take a considerable or unknown amount of time
-- When the process can be described with quantitative information, for example
+- When the process can be described with quantitative information, such
   as a percentage
 - To visually show the progression of a system operation such as downloading,
   uploading, loading data, submitting a form, or saving updates
