--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -9,7 +9,8 @@ tabs: ['Usage', 'Style']
 <PageDescription>
 
 A progress bar provides feedback about the duration and progression of a
-process.
+process, such as a download, file transfer, or installation, to indicate how
+long a user will be waiting.
 
 </PageDescription>
 
@@ -117,7 +118,7 @@ developers will have to calculate the percentage on their side with the value:
 
 Determinate progress bars are used when the loading progress can be tracked and
 translated into a percentage indicator which fills from 0% to 100% and never
-decrease in value. The entire animation moves from the left to the right – with
+decrease in value. The entire animation moves from the left to the right — with
 no back and forth motion.
 
 Use a determinate progress bar when progress can be calculated against a
@@ -365,7 +366,6 @@ The success loading state indicates that the action completed successfully.
 #### Error
 
 The error loading state indicates that the action did not successfully complete.
-The error loading state indicates that the action did not successfully complete.
 If an error occurs, an inline notification or error handling within the form
 should appear. As soon as a process fails, the current visual progress remains
 but just stops. For example, if a process fails at 75%, then the red line would
@@ -461,7 +461,7 @@ to right) when enough information is gathered to end the load animation.
 
 - Only hide the label when it is absolute clear to the user which process the
   progress bar represents. Note that you are still required to pass an
-  appropriate label which will be ready by screen readers.
+  appropriate label which will be read by screen readers.
 
 ## Related
 
