--- a/src/pages/components/progress-bar/usage.mdx
+++ b/src/pages/components/progress-bar/usage.mdx
@@ -65,15 +65,10 @@ how long a process will take, or if a request is being executed.
 - If the process takes less than 10 seconds to load, use
   [loading spinners](/components/loading/usage) instead
 
-#### Loading, inline loading, or progress bar?
+#### Inline loading or progress bar?
 
-- If an activity displays a loading spinner on one screen, it should not show
-  the progress bar elsewhere in the design.
-- Both progress bars and circles can show either determinate or indeterminate
-  progress. The given area should help determine if a progress bar or circle is
-  best for that space. Progress bars are preferred in vertically narrow areas
-  (tables, cards, etc.) while progress circles are ideal for full page loading
-  or in very small areas.
+If an activity displays a loading spinner on one screen, it should not show the
+progress bar elsewhere in the design.
 
 ## Live demo
 
@@ -479,15 +474,10 @@ to right) when enough information is gathered to end the load animation.
 
 - [Loading: skeleton states](/patterns/loading/#skeleton-states)
 
-#### Loading, inline loading, or progress bar?
+#### Inline loading or progress bar?
 
-- If an activity displays a loading spinners on one screen, it should not show
-  the progress bar elsewhere in the design.
-- Both progress bars and circles can show either determinate or indeterminate
-  progress. The given area should help determine if a progress bar or circle is
-  best for that space. Progress bars are preferred in vertically narrow areas
-  (tables, cards, etc.) while progress circles are ideal for full page loading
-  or in very small areas.
+If an activity displays a loading spinner on one screen, it should not show the
+progress bar elsewhere in the design.
 
 ## References
 
