--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -132,7 +132,7 @@ Import `_info.scss` in `app.scss` after all of the `carbon-component` imports.
 ```
 
 Like our other components, `index.js` will serve as an entrypoint. Since
-`Info.js` will export mutliple components, we'll use the `*` wildcard in the
+`Info.js` will export multiple components, we'll use the `*` wildcard in the
 entrypoint export.
 
 ```javascript path=src/components/Info/index.js
